# otelcol-bpf

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Common  README.md  go.mod  go.sum  go.work  go.work.sum  tools.go
.github/workflows/: ci.yaml  validate.yaml
bpf/: Makefile  go.mod  go.sum  tools.go
bpf/cmd/procexec/: procexec.go
bpf/cmd/tcplat/: main.go
bpf/cmd/tcpstats/: main.go
bpf/pkg/bpfutil/: bpfutil.go
bpf/pkg/byteutil/: byteutil.go  (+1 more)
bpf/procexec/: doc.go  exports.go  procexec.bpf.c  procexec.h  procexec_bpfeb.go  procexec_bpfel.go
bpf/tcp/: gen.go  integration_test.go  leak_test.go  metrics.go  tcp_lat.go  tcp_stats.go  tcpconnlat.bpf.c  tcpconnlat.h  tcpconnlat_bpfeb.go  tcpconnlat_bpfel.go
cmd/otelcol/: components.go  config.yaml  go.mod  go.sum  main.go  ocb-config.yaml
examples/: bpftcp.yaml  otlp.yaml
extension/bpflogger/: README.md  config.go  doc.go  extension.go  factory.go  generated_component_test.go  generated_package_test.go  go.mod  go.sum  logger.go  metadata.yaml
internal/byteutil/: byteutil.go  byteutil_test.go
internal/sharedcomponent/: doc.md
otelcol/: components.go  config.yaml  go.mod  go.sum  main.go  ocb-config.yaml
pkg/discover/: generic.go  kernel_test.go  kprobes.go  mounts.go  mounts_test.go
receiver/bpfproc/: doc.go  factory.go  generated_component_test.go  generated_package_test.go  go.mod  go.sum  metadata.yaml  tools.go
receiver/bpfstack/: README.md  bpfstack.go  config.go  doc.go  factory.go  generated_component_test.go  generated_package_test.go  go.mod  go.sum  metadata.yaml  tools.go
receiver/bpftcp/: bpftcp.go  config.go  doc.go  documentation.md  factory.go  generated_component_test.go  generated_package_test.go  go.mod  go.sum  metadata.yaml
receiver/pprofreceiver/: README.md  config.go  doc.go  factory.go  generated_component_test.go  go.mod  go.sum  metadata.yaml  pprofreceiver.go
receiver/tcptracer/: README.md  config.go  doc.go  factory.go  generated_component_test.go  generated_package_test.go  go.mod  go.sum  metadata.yaml  tcptracer.go
(+53 files in other folders)
